--- a/cart_django/cart/templates/cart_home.html
+++ b/cart_django/cart/templates/cart_home.html
@@ -113,5 +113,5 @@
 {% endblock footer %}
 {% block js_link %}
     {% load static %}
-    <script src="{% static 'js/edit_carte.js' %}"></script>
+    <script src="{% static 'js/edit_cartt.js' %}"></script>
 {% endblock js_link %}
